--- a/style.css
+++ b/style.css
@@ -199,4 +199,23 @@ pre {
   form input, form textarea, form button {
     font-size: 1rem;
   }
+  .flex-list {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.flex-list li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.7rem;
+}
+
+.flex-list li .emoji {
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
+  line-height: 1;
+  user-select: none;
+}
+
 }
