--- a/style.css
+++ b/style.css
@@ -24,10 +24,9 @@ header {
 }
 
 header h1 {
-  color: #2c3e50;
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-  font-weight: 700;
+text-align: center;
+  margin-bottom: 2rem;
+  color: #004080;
 }
 
 header p {
