--- a/style.css
+++ b/style.css
@@ -24,9 +24,13 @@ header {
 }
 
 header h1 {
-text-align: center;
-  margin-bottom: 2rem;
+  text-align: center;
   color: #004080;
+  background-color: #cce0f5; /* Azzurro chiaro */
+  padding: 1rem;
+  border-radius: 8px;
+}
+
 }
 
 header p {
