--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
 }
 
 header {
+   background-color: #e6f0fa; /* sfondo chiaro coerente */
+  padding: 2rem 1rem;
+  border-radius: 12px;
+  margin-bottom: 2rem;
   background: rgba(255, 255, 255, 0.95);
   backdrop-filter: blur(10px);
   padding: 2rem;
@@ -24,6 +28,10 @@ header {
 }
 
 hheader h1 {
+   background-color: #e6f0fa; /* sfondo chiaro coerente */
+  padding: 2rem 1rem;
+  border-radius: 12px;
+  margin-bottom: 2rem;
   text-align: center;
   color: #004080; /* colore testo come l'index */
   background-color: #e6f0fa; /* azzurro chiaro per la casella */
